fix: 추천 로직 수정

--- a/book-recommandation.ipynb
+++ b/book-recommandation.ipynb
@@ -789,8 +789,8 @@
     "    books = json.load(f)\n",
     "\n",
     "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=1500,\n",
-    "    chunk_overlap=300,\n",
+    "    chunk_size=1500,        # 중앙값과 75퍼센타일 사이의 값으로 설정\n",
+    "    chunk_overlap=300,      # chunk_size의 20% 정도로 설정\n",
     "    length_function=len,\n",
     "    separators=[\"\\n\\n\", \"\\n\", \". \", \" \", \"\"]\n",
     ")\n",
@@ -912,11 +912,9 @@
     "- 독서 상황: {reading_context}\n",
     "- 선호하는 집중도: {focus_level}\n",
     "\n",
-    "## 사용자 취향 정보\n",
-    "{preferences}\n",
+    "{preferences_section}\n",
     "\n",
-    "## 사용자가 읽은 관련 책들\n",
-    "{reading_history}\n",
+    "{history_section}\n",
     "\n",
     "## 후보 도서 목록\n",
     "{candidate_books}\n",
@@ -944,57 +942,87 @@
     "\"\"\"\n",
     "\n",
     "# 공통 프롬프트 템플릿 생성\n",
-    "base_prompt_template = ChatPromptTemplate.from_template(BASE_RECOMMENDATION_TEMPLATE)\n",
-    "\n",
-    "# 포맷팅 함수는 동일하게 유지\n",
+    "base_prompt_template = ChatPromptTemplate.from_template(BASE_RECOMMENDATION_TEMPLATE)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "사용자 독서 이력과 후보 도서 정보를 프롬프트에 추가하기 위해 format 함수를 추가한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def format_reading_history(reading_history_data):\n",
     "    if not reading_history_data:\n",
     "        return \"관련 독서 이력이 없습니다.\"\n",
     "    \n",
-    "    # 다단계 RAG 결과 포맷팅\n",
-    "    if isinstance(reading_history_data, list) and all(isinstance(item, dict) and 'metadata' in item for item in reading_history_data):\n",
-    "        return \"\\n\\n\".join([\n",
-    "            f\"- 도서: {item['metadata'].get('title', '제목 없음')}\\n\"\n",
-    "            f\"  저자: {item['metadata'].get('author', '저자 미상')}\\n\"\n",
-    "            f\"  장르: {item['metadata'].get('genre_str', '장르 없음')}\\n\"\n",
-    "            f\"  평점: {item['metadata'].get('rating', 0)}\\n\"\n",
-    "            f\"  내용: {item['content'][:200]}...\"\n",
-    "            for item in reading_history_data\n",
-    "        ])\n",
+    "    formatted_entries = []\n",
+    "    for item in reading_history_data:\n",
+    "        # 다단계 RAG 결과 처리\n",
+    "        if isinstance(item, dict) and 'metadata' in item:\n",
+    "            entry = {\n",
+    "                'title': item['metadata'].get('title', '제목 없음'),\n",
+    "                'author': item['metadata'].get('author', '저자 미상'),\n",
+    "                'genre': item['metadata'].get('genre_str', '장르 없음'),\n",
+    "                'rating': item['metadata'].get('rating', 0),\n",
+    "                'content': item['content'][:200] + \"...\" if len(item['content']) > 200 else item['content']\n",
+    "            }\n",
+    "        # 직접 벡터 검색 결과 처리\n",
+    "        elif isinstance(item, dict) and 'title' in item:\n",
+    "            entry = {\n",
+    "                'title': item['title'],\n",
+    "                'author': item['author'],\n",
+    "                'genre': item['genre'],\n",
+    "                'rating': item['rating'],\n",
+    "                'content': item['review']\n",
+    "            }\n",
+    "        else:\n",
+    "            continue\n",
+    "            \n",
+    "        formatted_entries.append(\n",
+    "            f\"- '{entry['title']}' (저자: {entry['author']}, 장르: {entry['genre']}, 평점: {entry['rating']})\\n\"\n",
+    "            f\"  내용: {entry['content']}\"\n",
+    "        )\n",
     "    \n",
-    "    # 직접 벡터 검색 결과 포맷팅\n",
-    "    elif isinstance(reading_history_data, list) and all(isinstance(item, dict) and 'title' in item for item in reading_history_data):\n",
-    "        return \"\\n\".join([\n",
-    "            f\"- '{item['title']}' (저자: {item['author']}, 장르: {item['genre']}, 평점: {item['rating']})\\n  리뷰: {item['review']}\"\n",
-    "            for item in reading_history_data\n",
-    "        ])\n",
-    "    \n",
-    "    # 다른 형식의 데이터\n",
-    "    return str(reading_history_data)\n",
+    "    return \"\\n\\n\".join(formatted_entries) if formatted_entries else \"관련 독서 이력이 없습니다.\"\n",
     "\n",
     "def format_book_candidates(candidates_data):\n",
     "    if not candidates_data:\n",
     "        return \"추천할 만한 후보 도서가 없습니다.\"\n",
     "    \n",
-    "    # 다단계 RAG 결과 포맷팅\n",
-    "    if isinstance(candidates_data, list) and all(isinstance(item, dict) and 'metadata' in item for item in candidates_data):\n",
-    "        return \"\\n\\n\".join([\n",
-    "            f\"{i+1}. 제목: {item['metadata'].get('title', '제목 없음')}\\n\"\n",
-    "            f\"   저자: {item['metadata'].get('author', '저자 미상')}\\n\"\n",
-    "            f\"   카테고리: {item['metadata'].get('category', '카테고리 없음')}\\n\"\n",
-    "            f\"   내용: {item['content'][:300]}...\"\n",
-    "            for i, item in enumerate(candidates_data)\n",
-    "        ])\n",
+    "    formatted_entries = []\n",
+    "    for i, item in enumerate(candidates_data, 1):\n",
+    "        # 다단계 RAG 결과 처리\n",
+    "        if isinstance(item, dict) and 'metadata' in item:\n",
+    "            entry = {\n",
+    "                'title': item['metadata'].get('title', '제목 없음'),\n",
+    "                'author': item['metadata'].get('author', '저자 미상'),\n",
+    "                'category': item['metadata'].get('category', '카테고리 없음'),\n",
+    "                'content': item['content'][:300] + \"...\" if len(item['content']) > 300 else item['content']\n",
+    "            }\n",
+    "        # 직접 벡터 검색 결과 처리\n",
+    "        elif isinstance(item, dict) and 'index' in item:\n",
+    "            entry = {\n",
+    "                'title': item['title'],\n",
+    "                'author': item['author'],\n",
+    "                'category': item['category'],\n",
+    "                'content': item['content']\n",
+    "            }\n",
+    "        else:\n",
+    "            continue\n",
+    "            \n",
+    "        formatted_entries.append(\n",
+    "            f\"{i}. '{entry['title']}' (저자: {entry['author']}, 카테고리: {entry['category']})\\n\"\n",
+    "            f\"   내용: {entry['content']}\"\n",
+    "        )\n",
     "    \n",
-    "    # 직접 벡터 검색 결과 포맷팅\n",
-    "    elif isinstance(candidates_data, list) and all(isinstance(item, dict) and 'index' in item for item in candidates_data):\n",
-    "        return \"\\n\".join([\n",
-    "            f\"{book['index']}. '{book['title']}' (저자: {book['author']}, 카테고리: {book['category']})\\n   내용 요약: {book['content'][:200]}...\"\n",
-    "            for book in candidates_data\n",
-    "        ])\n",
-    "    \n",
-    "    # 다른 형식의 데이터\n",
-    "    return str(candidates_data)\n"
+    "    return \"\\n\\n\".join(formatted_entries) if formatted_entries else \"추천할 만한 후보 도서가 없습니다.\""
    ]
   },
   {
@@ -1053,7 +1081,7 @@
     "def multi_stage_rag_search(user_query, num_candidates, num_history_results):\n",
     "    results = {}\n",
     "    \n",
-    "    # 1단계: 항상 사용자 취향 정보 검색 (가장 중요)\n",
+    "    # 1단계: 항상 사용자 취향 정보 검색\n",
     "    preference_results = preferences_vectorstore.similarity_search_with_score(user_query, k=1)\n",
     "    if preference_results:\n",
     "        results['user_preferences'] = preference_results[0]\n",
@@ -1089,45 +1117,15 @@
     "    \n",
     "    # 4단계: 강화된 쿼리로 도서 검색\n",
     "    book_results = books_vectorstore.similarity_search_with_score(enhanced_query, k=num_candidates)\n",
-    "    results['recommended_books'] = book_results\n",
     "    \n",
-    "    # 결과 포맷팅 및 반환\n",
+    "    # 결과 포맷팅 - 추천 도서만 포함\n",
     "    formatted_results = []\n",
-    "    \n",
-    "    # 사용자 취향 정보\n",
-    "    if 'user_preferences' in results:\n",
-    "        pref_doc, pref_score = results['user_preferences']\n",
+    "    for book_doc, book_score in book_results:\n",
     "        formatted_results.append({\n",
-    "            'type': 'user_preferences',\n",
-    "            'content': pref_doc.page_content,\n",
-    "            'metadata': pref_doc.metadata,\n",
-    "            'score': pref_score\n",
-    "        })\n",
-    "    \n",
-    "    # 관련 독서 이력\n",
-    "    if 'reading_history' in results:\n",
-    "        for i, (hist_doc, hist_score) in enumerate(results['reading_history']):\n",
-    "            if i < 2:  # 최대 2개만 포함\n",
-    "                formatted_results.append({\n",
-    "                    'type': 'reading_history',\n",
-    "                    'content': hist_doc.page_content,\n",
-    "                    'metadata': hist_doc.metadata,\n",
-    "                    'score': hist_score\n",
-    "                })\n",
-    "    \n",
-    "    # 추천 도서\n",
-    "    recommended_count = 0\n",
-    "    for book_doc, book_score in results['recommended_books']:\n",
-    "        formatted_results.append({\n",
-    "            'type': 'recommended_book',\n",
     "            'content': book_doc.page_content,\n",
     "            'metadata': book_doc.metadata,\n",
     "            'score': book_score\n",
     "        })\n",
-    "        \n",
-    "        recommended_count += 1\n",
-    "        if recommended_count >= num_candidates - 2:  # 취향과 이력을 포함하고 남은 슬롯 채우기\n",
-    "            break\n",
     "    \n",
     "    return formatted_results"
    ]
@@ -1144,26 +1142,8 @@
     "    search_query = f\"{user_emotion}을 느끼는 사람이 {desired_emotional_effect}할 수 있는 책\"\n",
     "    \n",
     "    # 다단계 RAG 검색 수행\n",
-    "    rag_results = multi_stage_rag_search(search_query, num_candidates, num_history_results)\n",
+    "    book_candidates = multi_stage_rag_search(search_query, num_candidates, num_history_results)\n",
     "    \n",
-    "    # 결과를 타입별로 분류\n",
-    "    user_preferences = None\n",
-    "    reading_history = []\n",
-    "    book_candidates = []\n",
-    "    \n",
-    "    for item in rag_results:\n",
-    "        if item['type'] == 'user_preferences':\n",
-    "            user_preferences = item\n",
-    "        elif item['type'] == 'reading_history':\n",
-    "            reading_history.append(item)\n",
-    "        elif item['type'] == 'recommended_book':\n",
-    "            book_candidates.append(item)\n",
-    "    \n",
-    "    # 취향 정보 포맷팅\n",
-    "    preferences_formatted = user_preferences['content'] if user_preferences else \"취향 정보가 없습니다.\"\n",
-    "    \n",
-    "    # 독서 이력 및 후보 도서 포맷팅 (공통 함수 사용)\n",
-    "    history_formatted = format_reading_history(reading_history)\n",
     "    candidates_formatted = format_book_candidates(book_candidates)\n",
     "    \n",
     "    result = chain.invoke({\n",
@@ -1172,8 +1152,6 @@
     "        \"occupation\": occupation,\n",
     "        \"reading_context\": reading_context,\n",
     "        \"focus_level\": focus_level,\n",
-    "        \"preferences\": preferences_formatted,\n",
-    "        \"reading_history\": history_formatted,\n",
     "        \"candidate_books\": candidates_formatted,\n",
     "        \"num_recommendations\": num_recommendations\n",
     "    })\n",
@@ -1224,7 +1202,6 @@
    "outputs": [],
    "source": [
     "def direct_vector_recommendation(user_emotion, desired_emotional_effect, occupation, reading_context, focus_level, num_candidates=8, num_history_results=3, num_recommendations=3):\n",
-    "    \"\"\"벡터 DB 직접 검색 결과를 바탕으로 LLM에 도서 추천을 요청하는 함수\"\"\"\n",
     "    # 감정과 원하는 효과를 기반으로 검색 쿼리 구성\n",
     "    search_query = f\"{user_emotion}을 느끼는 사람이 {desired_emotional_effect}할 수 있는 책\"\n",
     "    \n",
@@ -1235,32 +1212,10 @@
     "    history_results = history_vectorstore.similarity_search_with_score(search_query, k=num_history_results)\n",
     "    \n",
     "    # 3. 검색 결과 포맷팅\n",
-    "    candidate_books = []\n",
-    "    for i, (doc, score) in enumerate(book_results):\n",
-    "        book_info = {\n",
-    "            'index': i+1,\n",
-    "            'title': doc.metadata.get('title', '제목 없음'),\n",
-    "            'author': doc.metadata.get('author', '저자 미상'),\n",
-    "            'category': doc.metadata.get('category', '분류 없음'),\n",
-    "            'content': doc.page_content.strip()[:500] + \"...\" if len(doc.page_content) > 500 else doc.page_content.strip(),\n",
-    "            'similarity_score': score\n",
-    "        }\n",
-    "        candidate_books.append(book_info)\n",
+    "    candidates_formatted = format_book_candidates(book_results)\n",
     "    \n",
-    "    reading_history_formatted = []\n",
-    "    for doc, score in history_results:\n",
-    "        history_info = {\n",
-    "            'title': doc.metadata.get('title', '제목 없음'),\n",
-    "            'author': doc.metadata.get('author', '저자 미상'),\n",
-    "            'genre': doc.metadata.get('genre_str', '장르 없음'),\n",
-    "            'rating': doc.metadata.get('rating', 0),\n",
-    "            'review': doc.page_content.split('리뷰: ')[1].split('\\n')[0] if '리뷰: ' in doc.page_content else '리뷰 없음'\n",
-    "        }\n",
-    "        reading_history_formatted.append(history_info)\n",
-    "    \n",
-    "    # 독서 이력 및 후보 도서 포맷팅 (공통 함수 사용)\n",
-    "    history_formatted = format_reading_history(reading_history_formatted)\n",
-    "    candidates_formatted = format_book_candidates(candidate_books)\n",
+    "    preferences_section = f\"## 사용자 취향 정보\\n{preferences_formatted}\"\n",
+    "    history_section = f\"## 사용자가 읽은 관련 책들\\n{format_reading_history(history_results)}\"\n",
     "    \n",
     "    result = chain.invoke({\n",
     "        \"user_emotion\": user_emotion,\n",
@@ -1268,8 +1223,8 @@
     "        \"occupation\": occupation,\n",
     "        \"reading_context\": reading_context,\n",
     "        \"focus_level\": focus_level,\n",
-    "        \"preferences\": preferences_formatted,  # 사용자 취향 정보 (전역 변수)\n",
-    "        \"reading_history\": history_formatted,\n",
+    "        \"preferences_section\": preferences_section,\n",
+    "        \"history_section\": history_section,\n",
     "        \"candidate_books\": candidates_formatted,\n",
     "        \"num_recommendations\": num_recommendations\n",
     "    })\n",
@@ -1295,6 +1250,9 @@
     "    num_candidates = 6\n",
     "    num_history_results = 3\n",
     "    num_recommendations = 3\n",
+    "\n",
+    "    # 결과를 저장할 리스트\n",
+    "    recommendation_logs = []\n",
     "    \n",
     "    if method in [\"multi_stage\", \"both\"]:\n",
     "        print(\"\\n다단계 RAG 기반 추천 도서를 찾는 중...\\n\")\n",
