fix: 경량화 코드 추가

--- a/book-recommandation-llm.ipynb
+++ b/book-recommandation-llm.ipynb
@@ -909,6 +909,11 @@
       "outputs": [],
       "source": [
         "def train_with_lora(lora_r, model_name, train_dataset, test_dataset, formatting_func, data_collator):\n",
+        "    # CUDA 캐시 초기화\n",
+        "    if torch.cuda.is_available():\n",
+        "        torch.cuda.empty_cache()\n",
+        "        print(f'초기 가용 GPU 메모리: {torch.cuda.get_device_properties(0).total_memory/1024**3:.1f} GB')\n",
+        "\n",
         "    wandb.init(\n",
         "        project='Hanghae99-8-basic',\n",
         "        name=f'gpt-finetuning-with-lora-r{lora_r}',\n",
@@ -917,8 +922,12 @@
         "\n",
         "    print(f\"\\n=== Training with LoRA rank {lora_r} ===\")\n",
         "\n",
-        "    # 기본 모델 로드\n",
-        "    model = AutoModelForCausalLM.from_pretrained(model_name)\n",
+        "    # 기본 모델 로드 시 메모리 최적화 옵션 추가\n",
+        "    model = AutoModelForCausalLM.from_pretrained(\n",
+        "        model_name,\n",
+        "        device_map='auto',  # 자동으로 최적의 디바이스 할당\n",
+        "        torch_dtype=torch.float16  # 16비트 부동소수점 사용으로 메모리 절약\n",
+        "    )\n",
         "\n",
         "    # LoRA 설정\n",
         "    lora_config = LoraConfig(\n",
@@ -947,7 +956,10 @@
         "            num_train_epochs=3,\n",
         "            learning_rate=2e-5,\n",
         "            load_best_model_at_end=True,\n",
-        "            metric_for_best_model=\"eval_loss\"\n",
+        "            metric_for_best_model=\"eval_loss\",\n",
+        "            per_device_train_batch_size=4,  # 배치 사이즈 조정\n",
+        "            gradient_accumulation_steps=4,  # 그래디언트 누적으로 메모리 사용량 감소\n",
+        "            fp16=True  # 16비트 학습 활성화\n",
         "        ),\n",
         "        formatting_func=formatting_func,\n",
         "        data_collator=data_collator,\n",
